pie chart working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,9 +22,8 @@
 
 
   </div>
-
-  <app-pie-chart [datatable]="datatable"></app-pie-chart>
-
+  <app-pie-chart></app-pie-chart>
+  <!-- <app-pie-chart [datatable]="datatable"></app-pie-chart> -->
   <router-outlet></router-outlet>
 
 
