--- a/src/app/charts/pie-chart/pie-chart.component.html
+++ b/src/app/charts/pie-chart/pie-chart.component.html
@@ -1,3 +1,6 @@
-<div class="pie" [chart]="pieChart" ></div>
+
 
 <h1> Hello world !!</h1>
+<google-chart
+   [type]="chart.PieChart" [data]="datatable"></google-chart>
+
