--- a/src/app/charts/pie-chart/pie-chart.component.html
+++ b/src/app/charts/pie-chart/pie-chart.component.html
@@ -1,6 +1,9 @@
 
+<!-- <h1> Hello world !!</h1> -->
 
-<h1> Hello world !!</h1>
-<google-chart
-   [type]="chart.PieChart" [data]="datatable"></google-chart>
+<h3>Pie Chart</h3>
+<div #pieChart style="width: 100%; height: 100%;"></div>
+<!-- <google-chart [type]='chart.PieChart' [data]='datatable' [options]='chart.options' style="width: 100%;"></google-chart> -->
+<!-- <google-chart
+   [type]="chart.PieChart" [data]="datatable"></google-chart> -->
 
