--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,27 @@
 
   <h1> Corona Virus Tracker </h1>
 
+  <div class="float-right" >
+    <button class="ui circular facebook icon button">
+      <i class="facebook icon"></i>
+    </button>
+    <button class="ui circular twitter icon button">
+      <i class="twitter icon"></i>
+    </button>
+    <button class="ui circular linkedin icon button" (click)="openIt()">
+      <i class="linkedin icon"></i>
+    </button>
+    <button class="ui circular google plus icon button">
+      <a href="https://www.linkedin.com/in/dilraj-singh-9599861b1/"></a>
+      <i class="google plus icon"></i>
+    </button>
+  </div>
+
 
   <div class="jumbotron bg-dark text-center" >
+
+
+
 
     <h1 class="ui header orange"> World Dashboard </h1>
     <div class="row">
@@ -42,6 +61,38 @@
         </div>
 
     </div>
+
+
+    <div class="ui large buttons">
+      <button class="ui button" (click)="showBarChart()">Bar Chart </button>
+      <div class="or"></div>
+      <button class="ui button" (click)="showPieChart()" >Pie Chart</button>
+    </div>
+
+    <div class="row">
+
+      <div class="column-md-6" >
+        <!-- <app-bar-charts class="mr-6" *ngIf="barChart"></app-bar-charts> -->
+        <app-bar-charts class="mr-6"></app-bar-charts>
+
+      </div>
+
+      <div class="column-md-6" >
+
+        <!-- <app-pie-chart class="float right" *ngIf="pieChart"></app-pie-chart> -->
+        <app-pie-chart class="float right"></app-pie-chart>
+      </div>
+
+
+
+
+    </div>
+
+
+
+    <!-- <app-line-chart></app-line-chart> -->
+
+
   </div>
 
 <hr/>
@@ -53,16 +104,69 @@
         <option value="{{college}}" *ngFor="let college of colleges">{{ college }}</option>
       </datalist> -->
 
-  <div class="input-group mb-3">
+  <div class="input-group mb-3 form-group col-lg-5 mx-auto">
     <label class="input-group-text mr-3 mt-4" for="inputGroupSelect01">Country</label>
 
-    <input type="text" placeholder="Select" name="country" list="countries" class="form-select mt-4" (change)="getCountry($event.target.value)">
+    <input type="text" placeholder="Select" name="country" list="countries" class="form-select mt-4" (change)="getCountry($event.target.value)" style="width: 85%;">
         <datalist id="countries">
           <option value="{{country}}" *ngFor="let country of countriesTable">{{ country }}</option>
         </datalist>
 
     <!-- </select> -->
     <button class="ui inverted orange button  mt-4 ml-2" (click)="getCoronaData()" >Get Corona Data</button>
+
+      <!-- <div class="row"> -->
+  <br/>
+  </div>
+
+
+    <div class="ui statistic inverted segment" *ngIf="countrySub">
+      <!-- <div class="label">
+        Confirmed
+      </div>
+      <div class="value" >
+        {{ totalCollege }}
+      </div>
+      <div class="label">
+        {{ college }}
+      </div> -->
+
+      <a class="ui orange image label">
+        {{ country }}&nbsp;
+        <div class="detail">Country</div>
+      </a>
+
+      <br/>
+      <a class="ui yellow image label">
+        <!-- <img src="/images/avatar/small/christian.jpg"> -->
+        {{ NewConfirmed }}&nbsp;
+        <div class="detail">New Confirmed</div>
+      </a>
+
+      <br/>
+      <a class="ui yellow image label">
+        <!-- <img src="/images/avatar/small/christian.jpg"> -->
+        {{ NewDeaths }}&nbsp;
+        <div class="detail">New Deaths</div>
+      </a>
+
+      <br/>
+      <a class="ui blue image label">
+        <!-- <img src="/images/avatar/small/veronika.jpg"> -->
+        {{ NewRecovered }}&nbsp;
+        <div class="detail">New Recovered</div>
+      </a>
+
+      <br/>
+
+
+  <br/>
+<!-- </div> -->
+
+
+
+
+
 
   </div>
 
@@ -139,6 +243,7 @@
     </div>
 
 
+
     <!-- <div class="pie" [chart]="donutChart"></div>
     <div class="area" [chart]="areaChart"></div>
     <div class="bar" [chart]="barChart"></div>
@@ -178,13 +283,21 @@
 
     <app-continents></app-continents>
 
+    <h2 class="ui header">
+      <i class="university icon"></i>
+      <div class="content">
+        Colleges
+      </div>
+    </h2>
+
     <a class="ui orange tag label mt-2 ml-2">Colleges</a>
 
     <h4 class="ui orange inverted header">Number of cases in different schools accross United States</h4>
 
     <app-college></app-college>
 
-    <app-pie-chart></app-pie-chart>
+
+
 
 
 </div>
