--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -117,6 +117,10 @@
 
       <!-- <div class="row"> -->
   <br/>
+
+
+<!-- Table  -->
+
   </div>
 
 
@@ -296,9 +300,7 @@
 
     <app-college></app-college>
 
-
-
-
+    <!-- <app-tables></app-tables> -->
 
 </div>
 
