userinput html draft

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -301,6 +301,17 @@
     <app-college></app-college>
 
     <!-- <app-tables></app-tables> -->
+    <h2 class="ui header">
+      <i class="bell icon"></i>
+      <div class="content">
+        Register
+      </div>
+    </h2>
+
+    <a class="ui orange tag label mt-2 ml-2">Register</a>
+
+    <h4 class="ui orange inverted header">Sign up for notification about further outbreak of COVID-19 </h4>
+    <app-userinput></app-userinput>
 
 </div>
 
