nav-bar draft xh

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,22 @@
-<p>nav-bar works!</p>
+<!--<div class="jumbotron bg-dark" >
+    <section class = nav-bar>
+        <div>
+            <a href="#section-continents">CONTINENTS</a>
+        </div>
+
+        <div>
+            <a href="#section-colleges">COLLEGES</a>
+        </div>
+
+        <div>
+            <a href="#section-register">REGISTER</a>
+        </div>
+    </section>
+
+</div>-->
+<div class = top-nav-bar>
+    <a href="#section-continents">CONTINENTS</a>
+    <a href="#section-colleges">COLLEGES</a>
+    <a href="#section-register">REGISTER</a>
+    <!--<a href="#section-about">ABOUT</a>-->
+</div>
