--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<head>
+  <script src = ".../app/userinput/userinput.js"> </script>
+</head>
 <div class="ui inverted segment">
 
   <h1> Corona Virus Tracker </h1>
