--- a/src/app/userinput/userinput.component.html
+++ b/src/app/userinput/userinput.component.html
@@ -1,4 +1,6 @@
-
+<!-- <head>
+  <script src = ".../app/userinput/userinput.js"> </script>
+</head> -->
 <div class="jumbotron bg-dark" >
 
     <!--
@@ -9,18 +11,18 @@
     -->
     <!--
     <div class="form-group col-lg-5 mx-auto">
- 
+
          <label for="c" style="color: lightgrey;">Select College</label>
-    
+
         <input type="text" placeholder="First Name" name="" class="form-control"><br>
         <input type="text" placeholder="Last Name" name="" class="form-control"><br>
         <input type="text" placeholder="123456@email.com" name="" class="form-control"><br>
         <input type="text" placeholder="001-234-567" name="" class="form-control"><br>
 
         <input type="submit"  name="" class="form-control"><br>
-             
+
     </div>
-    --> 
+    -->
 
     <!--
     <form>
@@ -51,7 +53,7 @@
 
 <section class = register>
     <p>
-        By sign up for this website, a text message and email will be sending to you when there is a Corona virus outbreak.
+        Below you can sign up to recieve either an email that will let you know which areas have a spike in the COVID outbreak.
     </p><br>
     <form>
         <div>
@@ -66,26 +68,27 @@
         </div>
         <div>
           <label for="inputEmail" class="form-label">Email</label>
-          <input type="email" class="form-control" id="inputEmail" placeholder="">
+          <input type="text" class="form-control" id="inputEmail" placeholder="optional" name="inputEmail" #inputEmail>
           <span></span>
         </div>
-        <div>
+        <!--<div>
           <label for="inputPhoneNumber" class="form-label">Phone Number</label>
-          <input type="text" class="form-control" id="inputPhoneNumber" placeholder="">
+          <input type="text" class="form-control" id="inputPhoneNumber" placeholder="optional">
           <span></span>
-        </div>
+        </div>-->
         <br>
         <div>
           <div class="form-check">
             <input class="form-check-input" type="checkbox" id="gridCheck">
             <label class="form-check-label" for="gridCheck">
-              I'm agree to submit
+              I agree to submit
             </label>
             <span></span>
           </div>
         </div>
         <div>
-            <button type="submit" class="ui inverted orange button  mt-4 ml-2" >Submit</button>
+          <button type="submit" class="ui inverted orange button  mt-4 ml-2" (click) = 'onSubmit(inputEmail.value)'>Submit</button>
+          <!-- <button type="submit" class="ui inverted orange button  mt-4 ml-2" (click) = 'sendMail(inputEmail.value)'>Submit</button> -->
         </div>
       </form>
 </section>
